--- a/styles/shared/Header/_header-secondary.scss
+++ b/styles/shared/Header/_header-secondary.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  margin-left: 29px;
+  margin-right: 29px;
 
   .header-logo {
     grid-column: 1 / -1;
@@ -25,11 +27,20 @@
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
     justify-self: start;
+    font-size: 22px;
 
     ul {
       display: flex;
       align-items: center;
       gap: 8px;
+
+      :nth-child(1) {
+        a {
+          color: $brand-primary;
+          width: 30px;
+          height: 22px;
+        }
+      }
     }
   }
 
@@ -37,11 +48,31 @@
     grid-column: 2 / span 1;
     grid-row: 1 / span 1;
     justify-self: end;
+    font-size: 22px;
 
     ul {
       display: flex;
       align-items: center;
       gap: 8px;
+
+      li:nth-child(1) {
+        a {
+          position: relative;
+
+          > span {
+            position: absolute;
+            top: -12px;
+            right: -12px;
+            min-width: 21px;
+            height: 21px;
+            border-radius: 50%;
+            text-align: center;
+            font-size: 14px;
+            color: $white;
+            background-color: $brand-primary;
+          }
+        }
+      }
 
       li:nth-child(2) {
         a {
@@ -58,10 +89,21 @@
     grid-row: 1 / span 1;
     justify-self: start;
     align-self: center;
+    color: $gray-primary;
 
     ul {
       display: flex;
       gap: 8px;
+
+      li {
+        margin-right: 15px;
+      }
+
+      > li {
+        i {
+          color: $brand-primary;
+        }
+      }
     }
   }
 }
