--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,7 +13,7 @@
 @import '~bootstrap/scss/bootstrap-utilities';
 
 @import 'variables';
-@import './../styles/reset';
+@import 'reset';
 
 // shared
 @import './shared/index';
