--- a/styles/shared/Header/_header-secondary.scss
+++ b/styles/shared/Header/_header-secondary.scss
@@ -32,7 +32,7 @@
     ul {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 18px;
 
       :nth-child(1) {
         a {
@@ -52,7 +52,7 @@
     ul {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 18px;
 
       li:nth-child(1) {
         a {
@@ -62,8 +62,8 @@
             position: absolute;
             top: -12px;
             right: -12px;
-            min-width: 21px;
-            height: 21px;
+            min-width: 18px;
+            height: 18px;
             border-radius: 50%;
             text-align: center;
             font-size: 12px;
@@ -81,6 +81,24 @@
         }
       }
     }
+
+    @include media-breakpoint-up(lg) {
+      ul {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 41px;
+      }
+    }
+
+    img {
+      height: 41px;
+      width: 41px;
+
+      @include media-breakpoint-down(lg) {
+        width: 22px;
+        height: 22px;
+      }
+    }
   }
 
   .header-support {
@@ -92,11 +110,7 @@
 
     ul {
       display: flex;
-      gap: 8px;
-
-      li {
-        margin-right: 15px;
-      }
+      gap: 15px;
 
       > li {
         i {
