--- a/styles/shared/header/_nav-primary.scss
+++ b/styles/shared/header/_nav-primary.scss
@@ -2,7 +2,7 @@
   ul {
     display: flex;
     justify-content: center;
-    gap: 8px;
+    gap: 22px;
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 300px;
@@ -15,6 +15,26 @@
       &:hover {
         background-color: $brand-primary;
         color: $white;
+      }
+    }
+  }
+}
+
+.nav-secondary {
+  ul {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    font-size: 14px;
+    font-weight: 300px;
+    text-transform: uppercase;
+
+    a {
+      padding: 3px 8px;
+      transition: color 0.2s linear;
+
+      &:hover {
+        color: $brand-primary;
       }
     }
   }
