--- a/styles/homepage/_index.scss
+++ b/styles/homepage/_index.scss
@@ -15,6 +15,12 @@
 
       h1 {
         color: $brand-primary;
+        font-size: 35px;
+        font-weight: 500;
+
+        span {
+          font-weight: 300;
+        }
 
         @include media-breakpoint-up('lg') {
           font-weight: 500;
