--- a/styles/shared/footer/_footer-primary.scss
+++ b/styles/shared/footer/_footer-primary.scss
@@ -87,6 +87,7 @@
     @include media-breakpoint-up('lg') {
       align-self: end;
       justify-self: start;
+      margin-left: 16px;
     }
   }
 
